--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.31.0
-pandas==2.1.4
-numpy==1.26.3
-ccxt==4.2.25
-requests==2.31.0
-ta==0.11.0
-python-dateutil==2.8.2
-pytz==2023.3
+streamlit
+pandas
+numpy
+ccxt==3.1.53
+requests
+ta
+python-dateutil
+pytz
+certifi
